[project]
name = "discuz-logger"
version = "0.1.0"
description = "discuz lister & archiver"
authors = [
    {name = "saveweb", email = "saveweb@saveweb.org"},
]
dependencies = [
    "httpx[http2]>=0.27.0",
    "rich>=13.7.1",
    "tqdm>=4.66.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "AGPLv3"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"



[tool.pdm]
distribution = true
